--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # phpMussel-extras .gitattributes file.
-# phpMussel repository can be found here:
+# phpMussel-extras repository can be found here:
 # https://github.com/Maikuolan/phpMussel-extras/
 
 # Written based on the .gitattributes guide available from:
