--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,19 @@
-# phpMussel-extras .gitattributes file.
-# phpMussel-extras repository can be found here:
-# https://github.com/phpMussel/phpMussel-extras/
+# phpMussel/extras .gitattributes file.
+# phpMussel/extras repository can be found here:
+# https://github.com/phpMussel/extras/
 
-# Written based on the .gitattributes guide available from:
+# Refer to:
 # https://help.github.com/articles/dealing-with-line-endings/
 
 * text=auto
+*.dat binary
 *.gif binary
+*.ico binary
 *.jpg binary
 *.png binary
 *.svg binary
-*.ico binary
+
+# Refer to:
+# https://github.com/github/linguist
+
+plugins/plugins.dat linguist-language=YAML
