--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@
 # https://help.github.com/articles/dealing-with-line-endings/
 
 * text=auto
+*.md text eol=lf
 *.dat binary
 *.gif binary
 *.ico binary
